TFP-6618: Skriver om domenemodellen til VTP og rydder opp
----

Co-authored-by: Fredrik-Holtet <Fredrik.Andre.Holtet@nav.no>
Co-authored-by: Vilde-Zcimarzceck <Vilde.Zcimarzceck@nav.no>